--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bitsandbytes>=0.46.0",
     "numpy>=2.2.6",
     "optuna>=4.4.0",
+    "outlines>=1.1.1",
     "packaging>=25.0",
     "scikit-learn>=1.7.0",
     "torch>=2.7.0",
